# Multimodal-Oral-Lesions-RAG

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/chunk_generator/: chunk_generator.py
src/evaluate/: evaluate.py
src/graph/: graph.py
src/image_index/: build_image_index.py
src/patient_history/: patient_history.py
src/preprocessor/: preprocess_images.py
src/retriever/: retriever.py
src/text_index/: build_text_index.py
