[project]
name = "multimodal-oral-lesions-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.7",
    "numpy>=2.5.0",
    "open-clip-torch>=3.3.0",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
